@@ -11,6 +11,10 @@
 #' \code{normalize} is succeeded by \code{\link{logNormCounts}}.
 #'
 #' \code{centreSizeFactors} has no replacement - the \pkg{SingleCellExperiment} is removing support for multiple size factors, so this function is now trivial.
+#' 
+#' \code{runDiffusionMap} has no replacement. \pkg{destiny} is no longer on 
+#' Bioconductor. You can calculate a diffusion map using \pkg{destiny} yourself,
+#' and add it to a \code{reducedDim} field if you so wish.
 #'
 #' @return All functions error out with a defunct message pointing towards its descendent (if available).
 #'
